# LUPA

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
GUI/: drawingboard.py  frameattributes.py  framebase.py  framelisteners.py  framesolve.py  framevariables.py  gridzoom.py  tooltip.py
deprecated/: windkessel.py
elements/: capacitor.py  diode.py  ground.py  inductor.py  node.py  psource.py  qsource.py  resistor.py  wire.py
examples/: LV.json  README.md  __init__.py  bridge_circuit.json  calculator_demo.py  circuit_analysis_demo.py  combined_demo.py  simple_rc_circuit.json  voltage_divider.json
exceptions/: attibutesexceptions.py  calculatorexceptions.py  elementsexceptions.py
lupa/GUI/: drawingboard.py  frameattributes.py  framebase.py  framelisteners.py  frameprobes.py  framesolve.py  framevariables.py
lupa/core/: circuitgeom.py  circuitgraph.py  circuitsolver.py  graphedge.py  graphnode.py  timeintegration.py
lupa/elements/: capacitor.py  diode.py  ground.py  inductor.py  node.py  psource.py  qsource.py  resistor.py  wire.py
lupa/exceptions/: attibutesexceptions.py  calculatorexceptions.py  circuitsolverexceptions.py  elementsexceptions.py  solveframeexceptions.py
lupa/solvers/: circuitgeom.py  circuitgraph.py  circuitsolver.py  graphnode.py
lupa/tests/: test_calculator.py  test_strings.py
lupa/utils/: calculator.py  geometry.py  io.py  probes.py  strings.py
solvers/: circuitgeom.py  circuitgraph.py  circuitsolver.py  graphedge.py  graphnode.py  methods.py
tests/: test_strings.py
utils/: calculator.py  geometry.py  io.py
